Fixed paymentMethodCode, and switch to paymentMethodID

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon May 23 21:01:28 EDT 2011
+#Mon May 23 19:21:20 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -205,6 +205,7 @@ admin.setting.detailintegration=Integration Setup
 admin.setting.detailpermissions=User Permissions
 admin.setting.detailshippingmethod=Shipping Method Detail
 admin.setting.detailshippingservice=Shipping Service Detail
+admin.setting.detailviewupdate=Update Views
 admin.setting.edit=Edit Global Settings
 admin.setting.editPaymentMethod=Edit Payment Method
 admin.setting.editPaymentService=Configure Payment Service
@@ -249,6 +250,7 @@ admin.setting.saveshippingmethod_nav=Save
 admin.setting.saveshippingmethod_success=Shipping Method Saved
 admin.setting.saveshippingservice=Save Shipping Service
 admin.setting.saveshippingservice_nav=Save
+admin.setting.updatefrontendviews=Update All Frontend Views
 admin.sku.uploadImage=Upload Image
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
