--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,8 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue May 24 13:52:43 PDT 2011
-=\=\=\=\=\=\=
-<<<<<<<=HEAD
->>>>>>>=Shipping weight moved from product to SKU (Issue \#101)
+#Tue May 24 16:21:05 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -284,6 +281,8 @@ entity.accountemail.account=account
 entity.accountemail.accountEmailID=accountEmailID
 entity.accountemail.email=email
 entity.accountemail.isPrimary=isPrimary
+entity.accountemailaddress.emailaddress=Email Address
+entity.accountemailaddress.emailaddressconfirm=Confirm Email Address
 entity.accountphoneNumber.account=account
 entity.accountphoneNumber.accountPhoneNumberID=accountPhoneNumberID
 entity.accountphoneNumber.accountPhoneType=accountPhoneType
@@ -412,9 +411,11 @@ entity.order.account=account
 entity.order.billingAddress=billingAddress
 entity.order.orderCloseDate=orderCloseDate
 entity.order.orderID=orderID
+entity.order.orderNumber=Order Number
 entity.order.orderOpenDate=orderOpenDate
 entity.order.orderShipments=orderShipments
 entity.order.orderStatusType=orderStatusType
+entity.order.orderid=Order ID
 entity.orderitem.order=order
 entity.orderitem.orderItemID=orderItemID
 entity.orderitem.orderItemStatusType=orderItemStatusType
@@ -673,6 +674,10 @@ frontend.cart.detail=Shopping Cart
 frontend.cart.detail.noitems=There are currently no items in your cart.
 frontend.cart.update=Update Cart
 frontend.checkout.detail=Checkout
+frontend.checkout.detail.checkoutasguest=Checkout As Guest
+frontend.checkout.detail.guestcheckout=Guest Checkout
+frontend.checkout.detail.saveaccount=Save Account
+frontend.checkout.processorder=Place Order
 setting=Setting
 setting.account=Account
 setting.inherit=Inherit
