Multiple Checkout and Account updates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue May 24 16:21:05 PDT 2011
+#Wed May 25 14:01:17 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -678,6 +678,9 @@ frontend.checkout.detail.checkoutasguest=Checkout As Guest
 frontend.checkout.detail.guestcheckout=Guest Checkout
 frontend.checkout.detail.saveaccount=Save Account
 frontend.checkout.processorder=Place Order
+frontend.checkout.saveaccount=Save & Continue
+frontend.checkout.saveshippingaddress=Save & Continue
+frontend.checkout.saveshippingmethod=Save & Continue
 setting=Setting
 setting.account=Account
 setting.inherit=Inherit
