Added some basic order admin features

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed May 25 14:01:17 PDT 2011
+#Thu May 26 18:38:58 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -109,6 +109,8 @@ admin.option.show=Show
 admin.option.showall=All
 admin.optionGroup.reorder=Reorder Option Groups
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
+admin.order=Order Manager
+admin.order.detail=Order Detail
 admin.order.list=View All Orders
 admin.order.search=Search
 admin.product=Product Manager
@@ -409,13 +411,13 @@ entity.optiongroup.optionGroupName=Option Group Name
 entity.optiongroup.options=Options
 entity.order.account=account
 entity.order.billingAddress=billingAddress
-entity.order.orderCloseDate=orderCloseDate
-entity.order.orderID=orderID
+entity.order.orderCloseDateTime=Date Closed
 entity.order.orderNumber=Order Number
-entity.order.orderOpenDate=orderOpenDate
-entity.order.orderShipments=orderShipments
-entity.order.orderStatusType=orderStatusType
+entity.order.orderOpenDateTime=Date Placed
+entity.order.orderShipments=Order Shipments
+entity.order.orderStatusType=Order Status
 entity.order.orderid=Order ID
+entity.order.total=Total
 entity.orderitem.order=order
 entity.orderitem.orderItemID=orderItemID
 entity.orderitem.orderItemStatusType=orderItemStatusType
