Resource bundle entries.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue May 31 09:48:43 EDT 2011
+#Wed Jun 01 12:13:02 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -204,6 +204,7 @@ admin.setting.detail=Global Settings
 admin.setting.detailPaymentMethod=Payment Method Detail
 admin.setting.detailaddresszone=Address Zone Detail
 admin.setting.detailintegration=Integration Setup
+admin.setting.detailpaymentservice=Payment Service Detail
 admin.setting.detailpermissions=User Permissions
 admin.setting.detailshippingmethod=Shipping Method Detail
 admin.setting.detailshippingservice=Shipping Service Detail
@@ -670,6 +671,8 @@ entity.vendorskustock.vendor=vendor
 entity.vendorskustock.vendorSkuStockID=vendorSkuStockID
 frontend.account.detail=My Account
 frontend.account.edit=Edit Account
+frontend.account.editpassword=Edit Password
+frontend.account.listorders=List Orders
 frontend.cart.clearItems=Clear All Cart Items
 frontend.cart.detail=Shopping Cart
 frontend.cart.detail.noitems=There are currently no items in your cart.
