Start of order details Admin UI

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Jun 01 12:13:02 EDT 2011
+#Mon Jun 06 11:28:23 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -111,6 +111,13 @@ admin.optionGroup.reorder=Reorder Option Groups
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
 admin.order=Order Manager
 admin.order.detail=Order Detail
+admin.order.detail.basicorderinfo=Basic Order Info
+admin.order.detail.orderitems=Order Items
+admin.order.detail.payments=Payments
+admin.order.detail.shipments=Shipments
+admin.order.detail.tab.OrderActivityLog=Order Activity Log
+admin.order.detail.tab.orderDeliveries=Order Deliveries
+admin.order.detail.tab.orderFulfillments=Order Fullfillments
 admin.order.list=View All Orders
 admin.order.search=Search
 admin.product=Product Manager
@@ -271,7 +278,8 @@ entity.account.firstName=First Name
 entity.account.fullname=Name
 entity.account.lastName=Last Name
 entity.account.muraUser=Mura User
-entity.account.primaryEmail=Primary Email
+entity.account.primaryEmailAddress=Account Primary Email Address
+entity.account.primaryPhoneNumber=Account Primary Phone Number
 entity.account.remoteContactID=Remote Contact ID
 entity.account.remoteCustomerID=Remote Customer ID
 entity.account.remoteEmployeeID=Remote Employee ID
@@ -409,7 +417,7 @@ entity.optiongroup.optionGroupImage=Option Group Image
 entity.optiongroup.optionGroupImage_hint=Associate an image for this option Group. Supported Formats. JPG,PNG,GIF.
 entity.optiongroup.optionGroupName=Option Group Name
 entity.optiongroup.options=Options
-entity.order.account=account
+entity.order.account=Customer Account
 entity.order.billingAddress=billingAddress
 entity.order.orderCloseDateTime=Date Closed
 entity.order.orderNumber=Order Number
@@ -427,14 +435,15 @@ entity.orderitem.profile=profile
 entity.orderitem.quantity=quantity
 entity.orderitem.stock=stock
 entity.orderitem.taxAmount=taxAmount
-entity.orderpayment.amount=amount
-entity.orderpayment.amountAuthorized=amountAuthorized
-entity.orderpayment.amountCharged=amountCharged
+entity.orderpayment.amount=Amount
+entity.orderpayment.amountAuthorized=Amount Authorized
+entity.orderpayment.amountCharged=Amount Charged
 entity.orderpayment.amountSettled=amountSettled
 entity.orderpayment.amountVerified=amountVerified
+entity.orderpayment.billingAddress=Billing Address
 entity.orderpayment.order=order
 entity.orderpayment.orderPaymentID=orderPaymentID
-entity.orderpayment.paymentMethod=paymentMethod
+entity.orderpayment.paymentMethod=Payment Method
 entity.ordershipment.order=order
 entity.ordershipment.orderShipmentID=orderShipmentID
 entity.ordershipment.orderShipping=orderShipping
@@ -451,6 +460,7 @@ entity.ordershipping.orderShippingID=orderShippingID
 entity.ordershipping.orderShippingItems=orderShippingItems
 entity.ordershipping.shippingMethod=shippingMethod
 entity.paymentMethod.activeFlag=Active
+entity.paymentMethod.creditCard=Credit Card
 entity.paymentMethod.paymentMethodCode=Payment Method Code
 entity.paymentmethod.paymentMethodID=Payment Method ID
 entity.paymentmethod.providerGateway=Payment Provider Gateway
