--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jun 06 11:28:23 EDT 2011
+#Tue Jun 07 16:39:29 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -210,6 +210,9 @@ admin.setting.deleteshippingmethod_success=Shipping Method Deleted
 admin.setting.detail=Global Settings
 admin.setting.detailPaymentMethod=Payment Method Detail
 admin.setting.detailaddresszone=Address Zone Detail
+admin.setting.detailfulfillmentmethod=Fulfillment Method Detail
+admin.setting.detailfulfillmentmethod.tab.basicsettings=Basic Settings
+admin.setting.detailfulfillmentmethod.tab.workflowsettings=Workflow Settings
 admin.setting.detailintegration=Integration Setup
 admin.setting.detailpaymentservice=Payment Service Detail
 admin.setting.detailpermissions=User Permissions
@@ -221,14 +224,17 @@ admin.setting.editPaymentMethod=Edit Payment Method
 admin.setting.editPaymentService=Configure Payment Service
 admin.setting.editPaymentService_nav=Configure
 admin.setting.editaddresszone=Edit Address Zone
+admin.setting.editfulfillmentmethod=Edit Fulfillment Method
 admin.setting.editpermissions=Edit Permissions
 admin.setting.editshippingmethod=Edit Shipping Method
 admin.setting.editshippingservice=Configure Shipping Service
+admin.setting.fulfillmentmethod.shipping=Shipping
 admin.setting.listPaymentServices=Payment Service Listing
 admin.setting.listPaymentServices.servicedisplayname=Payment Service
 admin.setting.listPaymentServices_nav=Configure Payment Services
 admin.setting.listaddresszones=Address Zone Listing
 admin.setting.listaddresszones_nav=Address Zones
+admin.setting.listfulfillmentmethods=Order Fulfillment Methods
 admin.setting.listintegrationservices=Integration Services Listing
 admin.setting.listintegrationservices_nav=Integration Services
 admin.setting.listpaymentmethods=Payment Method Listing
@@ -255,6 +261,8 @@ admin.setting.saveShippingService_error=Correct the form errors indicated below 
 admin.setting.saveShippingService_success=Shipping Service Saved
 admin.setting.save_nav=Save
 admin.setting.saveaddresszone_nav=Save
+admin.setting.savefulfillmentmethod=Save
+admin.setting.savefulfillmentmethod_success=Fulfillment Method Saved
 admin.setting.saveshippingmethod=Save Shipping Method
 admin.setting.saveshippingmethod_nav=Save
 admin.setting.saveshippingmethod_success=Shipping Method Saved
@@ -376,6 +384,7 @@ entity.country.countryCode=Country Code
 entity.country.countryName=Country Name
 entity.createdByAccount=Created By
 entity.createdDateTime=Created
+entity.fulfillmentmethod.activeFlag=Active
 entity.historyorder.historyDateTime=historyDateTime
 entity.historyorder.historyOrderID=historyOrderID
 entity.historyorder.order=order
