Minor changes to payment method and fulfillment method views

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 07 16:39:29 EDT 2011
+#Tue Jun 07 16:49:23 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -211,8 +211,6 @@ admin.setting.detail=Global Settings
 admin.setting.detailPaymentMethod=Payment Method Detail
 admin.setting.detailaddresszone=Address Zone Detail
 admin.setting.detailfulfillmentmethod=Fulfillment Method Detail
-admin.setting.detailfulfillmentmethod.tab.basicsettings=Basic Settings
-admin.setting.detailfulfillmentmethod.tab.workflowsettings=Workflow Settings
 admin.setting.detailintegration=Integration Setup
 admin.setting.detailpaymentservice=Payment Service Detail
 admin.setting.detailpermissions=User Permissions
@@ -268,6 +266,8 @@ admin.setting.saveshippingmethod_nav=Save
 admin.setting.saveshippingmethod_success=Shipping Method Saved
 admin.setting.saveshippingservice=Save Shipping Service
 admin.setting.saveshippingservice_nav=Save
+admin.setting.tab.basicsettings=Basic Settings
+admin.setting.tab.workflowsettings=Workflow Settings
 admin.setting.updatefrontendviews=Update All Frontend Views
 admin.sku.uploadImage=Upload Image
 admin.vendor=Vendor Manager
