Controller and view fixes to shipping service/methods

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 07 16:49:23 EDT 2011
+#Thu Jun 09 08:54:39 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -227,12 +227,13 @@ admin.setting.editpermissions=Edit Permissions
 admin.setting.editshippingmethod=Edit Shipping Method
 admin.setting.editshippingservice=Configure Shipping Service
 admin.setting.fulfillmentmethod.shipping=Shipping
+admin.setting.fulfillmentmethod.shippingsettings=Shipping Settings
 admin.setting.listPaymentServices=Payment Service Listing
 admin.setting.listPaymentServices.servicedisplayname=Payment Service
 admin.setting.listPaymentServices_nav=Configure Payment Services
 admin.setting.listaddresszones=Address Zone Listing
 admin.setting.listaddresszones_nav=Address Zones
-admin.setting.listfulfillmentmethods=Order Fulfillment Methods
+admin.setting.listfulfillmentmethods=Fulfillment Methods
 admin.setting.listintegrationservices=Integration Services Listing
 admin.setting.listintegrationservices_nav=Integration Services
 admin.setting.listpaymentmethods=Payment Method Listing
@@ -241,7 +242,7 @@ admin.setting.listshippingmethods=List Shipping Methods
 admin.setting.listshippingmethods_nav=Shipping Methods
 admin.setting.listshippingservices=Shipping Service Listing
 admin.setting.listshippingservices.servicedisplayname=Shipping Service
-admin.setting.listshippingservices_nav=Configure Shipping Services
+admin.setting.listshippingservices_nav=Shipping Services
 admin.setting.paymentMethod.creditCard=Credit Card
 admin.setting.paymentMethod.creditCardsAccepted=Credit Cards Accepted
 admin.setting.paymentMethod.paypalExpress=Paypal Express
