Order detail UI updates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jun 09 08:54:39 EDT 2011
+#Thu Jun 09 16:20:39 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -114,6 +114,8 @@ admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
 admin.order.detail.orderitems=Order Items
 admin.order.detail.payments=Payments
+admin.order.detail.priceextended=Price Extended
+admin.order.detail.quantityshipped=Quantity Shipped
 admin.order.detail.shipments=Shipments
 admin.order.detail.tab.OrderActivityLog=Order Activity Log
 admin.order.detail.tab.orderDeliveries=Order Deliveries
@@ -436,13 +438,15 @@ entity.order.orderShipments=Order Shipments
 entity.order.orderStatusType=Order Status
 entity.order.orderid=Order ID
 entity.order.total=Total
+entity.orderFulfillment.shippingMethod=Shipping Method
+entity.orderfulfillment.shippingaddress=Shipping Address
 entity.orderitem.order=order
 entity.orderitem.orderItemID=orderItemID
 entity.orderitem.orderItemStatusType=orderItemStatusType
 entity.orderitem.orderShipment=orderShipment
-entity.orderitem.price=price
+entity.orderitem.price=Price
 entity.orderitem.profile=profile
-entity.orderitem.quantity=quantity
+entity.orderitem.quantity=Quantity Ordered
 entity.orderitem.stock=stock
 entity.orderitem.taxAmount=taxAmount
 entity.orderpayment.amount=Amount
