more order list/detail UI updates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jun 09 16:20:39 EDT 2011
+#Fri Jun 10 14:24:54 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -121,6 +121,8 @@ admin.order.detail.tab.OrderActivityLog=Order Activity Log
 admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
 admin.order.list=View All Orders
+admin.order.list.actions=Actions
+admin.order.saveactions=Save Actions
 admin.order.search=Search
 admin.product=Product Manager
 admin.product.altimages=Alternate Images
