minor updates to order list & detail

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jun 10 14:24:54 EDT 2011
+#Fri Jun 10 23:57:08 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -110,6 +110,7 @@ admin.option.showall=All
 admin.optionGroup.reorder=Reorder Option Groups
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
 admin.order=Order Manager
+admin.order.applyactions=Apply Actions
 admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
 admin.order.detail.orderitems=Order Items
@@ -122,7 +123,6 @@ admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
 admin.order.list=View All Orders
 admin.order.list.actions=Actions
-admin.order.saveactions=Save Actions
 admin.order.search=Search
 admin.product=Product Manager
 admin.product.altimages=Alternate Images
