Added setting to creditcard payment method to specify action on checkout

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jun 10 23:57:08 EDT 2011
+#Sun Jun 12 08:51:19 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -248,7 +248,11 @@ admin.setting.listshippingservices=Shipping Service Listing
 admin.setting.listshippingservices.servicedisplayname=Shipping Service
 admin.setting.listshippingservices_nav=Shipping Services
 admin.setting.paymentMethod.creditCard=Credit Card
+admin.setting.paymentMethod.creditCard.checkoutAction.authCharge=Authorize and Charge
+admin.setting.paymentMethod.creditCard.checkoutAction.authOnly=Authorize Only
+admin.setting.paymentMethod.creditCard.checkoutAction.noAuth=No Authorization
 admin.setting.paymentMethod.creditCardsAccepted=Credit Cards Accepted
+admin.setting.paymentMethod.creditcardActionOnCheckout=On Checkout
 admin.setting.paymentMethod.paypalExpress=Paypal Express
 admin.setting.save=Save Settings
 admin.setting.savePaymentMethod=Save Payment Method
