--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Jun 12 08:51:19 EDT 2011
+#Mon Jun 13 09:44:32 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -110,7 +110,9 @@ admin.option.showall=All
 admin.optionGroup.reorder=Reorder Option Groups
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
 admin.order=Order Manager
-admin.order.applyactions=Apply Actions
+admin.order.applyOrderActions=Apply Actions
+admin.order.applyOrderActions_confirm=Confirm that you want to apply these actions.
+admin.order.applyOrderActions_success=Order actions applied.
 admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
 admin.order.detail.orderitems=Order Items
@@ -284,6 +286,7 @@ admin.vendor.dashboard=Vendor Dashboard
 define.cancel=Cancel
 define.global=Global
 define.no=No
+define.notapplicable=N/A
 define.save=Save
 define.select=Select
 define.yes=Yes
