--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Jun 12 08:51:19 EDT 2011
+#Mon Jun 13 09:53:59 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -248,9 +248,9 @@ admin.setting.listshippingservices=Shipping Service Listing
 admin.setting.listshippingservices.servicedisplayname=Shipping Service
 admin.setting.listshippingservices_nav=Shipping Services
 admin.setting.paymentMethod.creditCard=Credit Card
-admin.setting.paymentMethod.creditCard.checkoutAction.authCharge=Authorize and Charge
-admin.setting.paymentMethod.creditCard.checkoutAction.authOnly=Authorize Only
-admin.setting.paymentMethod.creditCard.checkoutAction.noAuth=No Authorization
+admin.setting.paymentMethod.creditCard.checkoutAction.authorize=Authorize Only
+admin.setting.paymentMethod.creditCard.checkoutAction.authorizeAndCharge=Authorize and Charge
+admin.setting.paymentMethod.creditCard.checkoutAction.none=No Authorization
 admin.setting.paymentMethod.creditCardsAccepted=Credit Cards Accepted
 admin.setting.paymentMethod.creditcardActionOnCheckout=On Checkout
 admin.setting.paymentMethod.paypalExpress=Paypal Express
