Work on order detail UI

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,3 +1,5 @@
+#Created by JInto - www.guh-software.de
+#Mon Jun 13 15:52:56 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -394,6 +396,7 @@ entity.country.countryCode=Country Code
 entity.country.countryName=Country Name
 entity.createdByAccount=Created By
 entity.createdDateTime=Created
+entity.fulfillment=Fulfillment
 entity.fulfillmentmethod.activeFlag=Active
 entity.historyorder.historyDateTime=historyDateTime
 entity.historyorder.historyOrderID=historyOrderID
@@ -445,7 +448,11 @@ entity.order.orderShipments=Order Shipments
 entity.order.orderStatusType=Order Status
 entity.order.orderid=Order ID
 entity.order.total=Total
+entity.orderFulfillment.shippingCharge=Shipping Charge
 entity.orderFulfillment.shippingMethod=Shipping Method
+entity.orderFulfillment.subtotal=Subtotal
+entity.orderFulfillment.tax=Tax
+entity.orderFulfillment.total=Total
 entity.orderfulfillment.shippingaddress=Shipping Address
 entity.orderitem.order=order
 entity.orderitem.orderItemID=orderItemID
