Finished Credit Card Order Processing

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -248,9 +248,9 @@ admin.setting.listshippingservices=Shipping Service Listing
 admin.setting.listshippingservices.servicedisplayname=Shipping Service
 admin.setting.listshippingservices_nav=Shipping Services
 admin.setting.paymentMethod.creditCard=Credit Card
-admin.setting.paymentMethod.creditCard.checkoutAction.authorizeAndCharge=Authorize and Charge
-admin.setting.paymentMethod.creditCard.checkoutAction.authorize=Authorize Only
-admin.setting.paymentMethod.creditCard.checkoutAction.none=None
+admin.setting.paymentMethod.creditCard.checkoutTransactionType.authorizeAndCharge=Authorize and Charge
+admin.setting.paymentMethod.creditCard.checkoutTransactionType.authorize=Authorize Only
+admin.setting.paymentMethod.creditCard.checkoutTransactionType.none=None
 admin.setting.paymentMethod.creditCardsAccepted=Credit Cards Accepted
 admin.setting.paymentMethod.creditcardActionOnCheckout=On Checkout
 admin.setting.paymentMethod.paypalExpress=Paypal Express
