--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 14 15:29:56 EDT 2011
+#Tue Jun 14 17:24:56 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -128,6 +128,7 @@ admin.order.detail.tab.orderFulfillments=Order Fullfillments
 admin.order.list=View All Orders
 admin.order.list.actions=Actions
 admin.order.search=Search
+admin.orderfulfillment.process=Process Fulfillment
 admin.product=Product Manager
 admin.product.altimages=Alternate Images
 admin.product.attributes=Custom Attributes
