Master order fulfillments list.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 14 17:24:56 EDT 2011
+#Tue Jun 14 18:37:24 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -127,6 +127,7 @@ admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
 admin.order.list=View All Orders
 admin.order.list.actions=Actions
+admin.order.listorderfulfillments=Order Fulfillments List
 admin.order.search=Search
 admin.orderfulfillment.process=Process Fulfillment
 admin.product=Product Manager
@@ -460,6 +461,8 @@ entity.orderFulfillment.total=Total
 entity.orderPayment.creditCardLastFour=Last Four
 entity.orderPayment.creditCardType=Credit Card Type
 entity.orderPayment.expirationDate=Expiration Date
+entity.orderfulfillment.fulfillmentmethod=Fulfillment Method
+entity.orderfulfillment.fulfillmentmethod.shipping=Shipping
 entity.orderfulfillment.shippingaddress=Shipping Address
 entity.orderitem.order=order
 entity.orderitem.orderItemID=orderItemID
