--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 14 18:37:24 EDT 2011
+#Wed Jun 15 12:01:21 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -113,6 +113,9 @@ admin.order=Order Manager
 admin.order.applyOrderActions=Apply Actions
 admin.order.applyOrderActions_confirm=Confirm that you want to apply these actions.
 admin.order.applyOrderActions_success=Order actions applied.
+admin.order.cancelorder=Cancel Order
+admin.order.cancelorder_confirm=Are you sure you want to cancel this order?
+admin.order.cancelorder_success=Order canceled
 admin.order.chargeorderpayment=Charge Payment
 admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
@@ -128,6 +131,9 @@ admin.order.detail.tab.orderFulfillments=Order Fullfillments
 admin.order.list=View All Orders
 admin.order.list.actions=Actions
 admin.order.listorderfulfillments=Order Fulfillments List
+admin.order.refundorder=Refund Order
+admin.order.refundorder_confirm=Are you sure you want to refund this order?
+admin.order.refundorder_success=Order refunded
 admin.order.search=Search
 admin.orderfulfillment.process=Process Fulfillment
 admin.product=Product Manager
@@ -446,6 +452,7 @@ entity.optiongroup.optionGroupName=Option Group Name
 entity.optiongroup.options=Options
 entity.order.account=Customer Account
 entity.order.billingAddress=billingAddress
+entity.order.cancel_validatestatus=Order cannot be deleted due to order status ({statusValue})
 entity.order.orderCloseDateTime=Date Closed
 entity.order.orderNumber=Order Number
 entity.order.orderOpenDateTime=Date Placed
