Finished order fulfillment form.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Jun 15 12:01:21 EDT 2011
+#Wed Jun 15 12:29:43 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -128,9 +128,12 @@ admin.order.detail.shipments=Shipments
 admin.order.detail.tab.OrderActivityLog=Order Activity Log
 admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
+admin.order.detailorderfulfillment=Order Fulfillment Details
 admin.order.list=View All Orders
 admin.order.list.actions=Actions
 admin.order.listorderfulfillments=Order Fulfillments List
+admin.order.processorderfulfillment=Process Order Fulfillment
+admin.order.processorderfulfillment_nav=Process
 admin.order.refundorder=Refund Order
 admin.order.refundorder_confirm=Are you sure you want to refund this order?
 admin.order.refundorder_success=Order refunded
