--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,7 @@
 #Created by JInto - www.guh-software.de
 #Wed Jun 15 12:29:43 EDT 2011
+setting.paymentMethod.creditCard.storeCreditCardWithOrderPayment=Store credit card numbers with orders
+setting.paymentMethod.creditCard.storeCreditCardWithAccount=Allow customers to save credit card numbers for future orders
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
