Generation of order deliveries from order fulfillments.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,7 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Jun 15 12:29:43 EDT 2011
-setting.paymentMethod.creditCard.storeCreditCardWithOrderPayment=Store credit card numbers with orders
-setting.paymentMethod.creditCard.storeCreditCardWithAccount=Allow customers to save credit card numbers for future orders
+#Thu Jun 16 07:37:36 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -476,6 +474,7 @@ entity.orderPayment.expirationDate=Expiration Date
 entity.orderfulfillment.fulfillmentmethod=Fulfillment Method
 entity.orderfulfillment.fulfillmentmethod.shipping=Shipping
 entity.orderfulfillment.shippingaddress=Shipping Address
+entity.orderitem.extendedprice=Extended Price
 entity.orderitem.order=order
 entity.orderitem.orderItemID=orderItemID
 entity.orderitem.orderItemStatusType=orderItemStatusType
@@ -751,6 +750,8 @@ setting.inherit=Inherit
 setting.order=Order
 setting.order.newOrderNotifyFrom=New Order Notification Email From
 setting.order.newOrderNotifyTo=New Order Notification Email To
+setting.paymentMethod.creditCard.storeCreditCardWithAccount=Allow customers to save credit card numbers for future orders
+setting.paymentMethod.creditCard.storeCreditCardWithOrderPayment=Store credit card numbers with orders
 setting.product=Product
 setting.product.allowBackorderFlag=Products can be Backordered
 setting.product.allowDropshipFlag=Products can be dropshipped
