Fixed Checkout Credit Card Processing Issues

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jun 16 07:37:36 EDT 2011
+#Thu Jun 16 14:08:44 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -468,9 +468,11 @@ entity.orderFulfillment.shippingMethod=Shipping Method
 entity.orderFulfillment.subtotal=Subtotal
 entity.orderFulfillment.tax=Tax
 entity.orderFulfillment.total=Total
-entity.orderPayment.creditCardLastFour=Last Four
-entity.orderPayment.creditCardType=Credit Card Type
-entity.orderPayment.expirationDate=Expiration Date
+entity.orderPaymentCreditCard.creditCardNumber=Credit Card Number
+entity.orderPaymentCreditCard.securityCode=CVV Code
+entity.orderPaymentcreditcard.creditCardLastFour=Last Four
+entity.orderPaymentcreditcard.creditCardType=Credit Card Type
+entity.orderPaymentcreditcard.expirationDate=Expiration Date
 entity.orderfulfillment.fulfillmentmethod=Fulfillment Method
 entity.orderfulfillment.fulfillmentmethod.shipping=Shipping
 entity.orderfulfillment.shippingaddress=Shipping Address
@@ -485,14 +487,14 @@ entity.orderitem.quantity=Quantity Ordered
 entity.orderitem.stock=stock
 entity.orderitem.taxAmount=taxAmount
 entity.orderpayment.amount=Amount
-entity.orderpayment.amountAuthorized=Amount Authorized
-entity.orderpayment.amountCharged=Amount Charged
-entity.orderpayment.amountSettled=amountSettled
-entity.orderpayment.amountVerified=amountVerified
-entity.orderpayment.billingAddress=Billing Address
-entity.orderpayment.order=order
-entity.orderpayment.orderPaymentID=orderPaymentID
+entity.orderpayment.order=Order
+entity.orderpayment.orderPaymentID=Order Payment ID
 entity.orderpayment.paymentMethod=Payment Method
+entity.orderpaymentcreditcard.amountAuthorized=Amount Authorized
+entity.orderpaymentcreditcard.amountCharged=Amount Charged
+entity.orderpaymentcreditcard.amountSettled=amountSettled
+entity.orderpaymentcreditcard.billingAddress=Billing Address
+entity.orderpaymentcreditcard.nameOnCreditCard=Name on Card
 entity.ordershipment.order=order
 entity.ordershipment.orderShipmentID=orderShipmentID
 entity.ordershipment.orderShipping=orderShipping
