Admin UI Updates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,11 +1,12 @@
 #Created by JInto - www.guh-software.de
-#Thu Jun 16 14:08:44 PDT 2011
+#Fri Jun 17 14:07:47 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
 admin.account.delete_confirm=Are you sure that you would like to delete this account?
 admin.account.delete_nav=Delete
 admin.account.detail=Account Detail
+admin.account.detail.tab.orders=Orders
 admin.account.edit=Edit Account
 admin.account.list=Account Listing
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
