Added validation and success/error messages to fulfillment processing

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jun 17 14:07:47 PDT 2011
+#Fri Jun 17 23:34:48 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -135,6 +135,7 @@ admin.order.list.actions=Actions
 admin.order.listorderfulfillments=Order Fulfillments List
 admin.order.processorderfulfillment=Process Order Fulfillment
 admin.order.processorderfulfillment_nav=Process
+admin.order.processorderfulfillment_success=Order fulfillment processed.
 admin.order.refundorder=Refund Order
 admin.order.refundorder_confirm=Are you sure you want to refund this order?
 admin.order.refundorder_success=Order refunded
@@ -306,6 +307,7 @@ define.select=Select
 define.yes=Yes
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
+entity.account.accountName=Account Name
 entity.account.company=Company
 entity.account.delete_success=Account Deleted Successfully
 entity.account.firstName=First Name
@@ -474,6 +476,7 @@ entity.orderPaymentCreditCard.securityCode=CVV Code
 entity.orderPaymentcreditcard.creditCardLastFour=Last Four
 entity.orderPaymentcreditcard.creditCardType=Credit Card Type
 entity.orderPaymentcreditcard.expirationDate=Expiration Date
+entity.orderdelivery.orderdeliveryitems_validatehasorderdeliveryitems=No quantities from the orderfulfillment were indicated for delivery.
 entity.orderfulfillment.fulfillmentmethod=Fulfillment Method
 entity.orderfulfillment.fulfillmentmethod.shipping=Shipping
 entity.orderfulfillment.shippingaddress=Shipping Address
