Fixed bug where set values weren't shown as selected in the PropertyDisplay tag

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jun 17 23:34:48 EDT 2011
+#Mon Jun 20 11:39:59 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -364,6 +364,12 @@ entity.attribute.attributeID=attributeID
 entity.attribute.attributeName=Attribute Name
 entity.attribute.attributeOptions=Attribute Options
 entity.attribute.attributeType=Input Type
+entity.attribute.attributetype.atCheckBox=Check Box
+entity.attribute.attributetype.atRadioGroup=Radio Group
+entity.attribute.attributetype.atRichTextEditor=Rich Text Editor
+entity.attribute.attributetype.atSelectBox=Select Box
+entity.attribute.attributetype.atTextArea=Text Area
+entity.attribute.attributetype.atTextBox=Text Box
 entity.attribute.defaultValue=Default Value
 entity.attribute.delete_success=The Attribute was successfully deleted.
 entity.attribute.requiredFlag=Required
