Finished Address Zone Administration

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jun 20 11:39:59 EDT 2011
+#Mon Jun 20 13:25:31 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -340,6 +340,7 @@ entity.accountrelationship.relationshipType=relationshipType
 entity.address.addressID=Address ID
 entity.address.city=City
 entity.address.company=Company
+entity.address.country=Country
 entity.address.countryCode=Country
 entity.address.locality=Locality
 entity.address.name=Name
@@ -353,9 +354,6 @@ entity.addresszone.addressZoneLocations=Address Zone Locations
 entity.addresszone.addressZoneName=Address Zone Name
 entity.addresszonelocation.addressZone=Address Zone
 entity.addresszonelocation.addressZoneLocationID=Address Zone Location ID
-entity.addresszonelocation.country=Country
-entity.addresszonelocation.postalCode=Postal Code
-entity.addresszonelocation.state=state
 entity.attribute.activeFlag=Active
 entity.attribute.attributeClassType=attributeClassType
 entity.attribute.attributeDescription=Attribute Description
