Added some UI for configuring taxes.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jun 20 13:25:31 PDT 2011
+#Mon Jun 20 17:34:48 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -247,11 +247,13 @@ admin.setting.editfulfillmentmethod=Edit Fulfillment Method
 admin.setting.editpermissions=Edit Permissions
 admin.setting.editshippingmethod=Edit Shipping Method
 admin.setting.editshippingservice=Configure Shipping Service
+admin.setting.edittaxcategory_nav=Edit
 admin.setting.fulfillmentmethod.shipping=Shipping
 admin.setting.fulfillmentmethod.shippingsettings=Shipping Settings
 admin.setting.listPaymentServices=Payment Service Listing
 admin.setting.listPaymentServices.servicedisplayname=Payment Service
 admin.setting.listPaymentServices_nav=Configure Payment Services
+admin.setting.listTaxCategories=Tax Categories
 admin.setting.listaddresszones=Address Zone Listing
 admin.setting.listaddresszones_nav=Address Zones
 admin.setting.listfulfillmentmethods=Fulfillment Methods
@@ -696,6 +698,7 @@ entity.stockadjustmentitem.newQuantity=newQuantity
 entity.stockadjustmentitem.stock=stock
 entity.stockadjustmentitem.stockAdjustment=stockAdjustment
 entity.stockadjustmentitem.stockAdjustmentItemID=stockAdjustmentItemID
+entity.taxCategory.taxCategoryName=Category Name
 entity.type.childTypes=childTypes
 entity.type.parentType=parentType
 entity.type.systemCode=systemCode
