Added confirm to update views and added tax category rate

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jun 20 17:34:48 PDT 2011
+#Tue Jun 21 08:43:07 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -297,6 +297,7 @@ admin.setting.saveshippingservice_nav=Save
 admin.setting.tab.basicsettings=Basic Settings
 admin.setting.tab.workflowsettings=Workflow Settings
 admin.setting.updatefrontendviews=Update All Frontend Views
+admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS
 admin.sku.uploadImage=Upload Image
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
