--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 21 08:43:07 PDT 2011
+#Sat Jun 25 13:40:58 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -132,6 +132,7 @@ admin.order.detail.tab.orderFulfillments=Order Fullfillments
 admin.order.detailorderfulfillment=Order Fulfillment Details
 admin.order.list=View All Orders
 admin.order.list.actions=Actions
+admin.order.list.showAdvancedSearch=Advanced Search
 admin.order.listorderfulfillments=Order Fulfillments List
 admin.order.processorderfulfillment=Process Order Fulfillment
 admin.order.processorderfulfillment_nav=Process
