Started laying out advanced order searching (by date and status)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Jun 25 13:40:58 EDT 2011
+#Mon Jun 27 14:14:05 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -302,6 +302,7 @@ admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE A
 admin.sku.uploadImage=Upload Image
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
+define.all=All
 define.cancel=Cancel
 define.global=Global
 define.no=No
