Added confirmation E-Mail for issue #167

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jun 27 14:14:05 EDT 2011
+#Mon Jun 27 16:48:19 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -764,8 +764,10 @@ setting=Setting
 setting.account=Account
 setting.inherit=Inherit
 setting.order=Order
-setting.order.newOrderNotifyFrom=New Order Notification Email From
-setting.order.newOrderNotifyTo=New Order Notification Email To
+setting.order.orderPlacedEmailBCC=New Order Placed Email BCC
+setting.order.orderPlacedEmailCC=New Order Placed Email CC
+setting.order.orderPlacedEmailFrom=New Order Placed Email From
+setting.order.orderPlacedEmailSubject=New Order Placed Email Subject
 setting.paymentMethod.creditCard.storeCreditCardWithAccount=Allow customers to save credit card numbers for future orders
 setting.paymentMethod.creditCard.storeCreditCardWithOrderPayment=Store credit card numbers with orders
 setting.product=Product
