Order deliveries listing in order detail page.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -120,6 +120,7 @@ admin.order.cancelorder_success=Order canceled
 admin.order.chargeorderpayment=Charge Payment
 admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
+admin.order.detail.noorderdeliveries=No deliveries exist yet for this order.
 admin.order.detail.orderitems=Order Items
 admin.order.detail.paymentdetails=Payment Details
 admin.order.detail.payments=Payments
@@ -475,6 +476,10 @@ entity.order.orderShipments=Order Shipments
 entity.order.orderStatusType=Order Status
 entity.order.orderid=Order ID
 entity.order.total=Total
+entity.orderDelivery=Order Delivery
+entity.orderDelivery.deliveryCloseDateTime=Delivery Close Date
+entity.orderDelivery.deliveryOpenDateTime=Delivery Open Date
+entity.orderDeliveryShipping.trackingnumber=Tracking Number
 entity.orderFulfillment.shippingCharge=Shipping Charge
 entity.orderFulfillment.shippingMethod=Shipping Method
 entity.orderFulfillment.subtotal=Subtotal
